--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script></script>
+    <meta charset='utf-8' />
+    <title>Crime in Chicago</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
+    <div id='map'></div>
     <h1>Crime in Chicago</h1>
     <router-view></router-view>
 
     <div id="footer">
         <script src="https://unpkg.com/vue"></script>
         <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-        <script src="bundle.js"></script>
+        <script src="static/scripts/bundle.js"></script>
     </div>
 </body>
 </html>
