--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <div id='map'></div>
-    <h1>Crime in Chicago</h1>
-    <router-view></router-view>
+    
+    <div id="app-container"></div>
 
     <div id="footer">
-        <script src="https://unpkg.com/vue"></script>
-        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
         <script src="static/scripts/bundle.js"></script>
     </div>
 </body>
